# python3-wappalyzer

./: MANIFEST.in  README.md  pyproject.toml
src/wappalyzer_core/: __init__.py  analyzer.py  appdata.py  browser.py  categories.json  jsonremove.py  patterns.py  scansite.py  site.py  technologies.json  wappalyzer_driver.py
