[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wappalyzer-core"          # choose any unique name
version = "0.1.2"
description = "A Wappalyzer core module"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }         # or your license
authors = [{ name = "nmmapper", email = "inquiry@nmmapper.com" }]
dependencies = [
    'regex',
    'playwright',
    'aiohttp',
    'dnspython',
    'beautifulsoup4',
    'lxml',
    'requests'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/nmmapper/python3-wappalyzer"

[tool.setuptools.packages.find]
where = ["src"]                     # if you use src/ layout

[tool.setuptools.package-data]
wappalyzer_core = ["*.json"]

[tool.setuptools]
include-package-data = true
